# PulseForge

./: CMakeLists.txt  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md
data/: io.github.MoeAra.PulseForge.desktop  pulseforge.desktop  pulseforge.service.in
data/metainfo/: io.github.MoeAra.PulseForge.metainfo.xml  io.github.Moe_Ara.PulseForge.metainfo.xml
docs/: DEVELOPMENT.md  DSP_AUDIT.md
scripts/: package-appimage.sh
src/: main.cpp
src/audio/: AudioConfig.hpp  AudioDevice.hpp  EffectChain.hpp  FakeAudioBackend.hpp  IAudioBackend.hpp  PipeWireBackend.cpp  PipeWireBackend.hpp  PipeWireRouting.cpp  PipeWireRouting.hpp
src/core/: AppConfig.hpp  Logger.hpp
src/dsp/: AudioProcessor.cpp  AudioProcessor.hpp  BiquadFilter.cpp  BiquadFilter.hpp  DspConfig.hpp  DynamicsProcessor.cpp  DynamicsProcessor.hpp  ParametricEQ.cpp  ParametricEQ.hpp  SpscFrameRingBuffer.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  TrayManager.cpp  TrayManager.hpp  styleDark.qss
src/gui/components/: CardContainer.cpp  CardContainer.hpp  DeviceSelector.cpp  DeviceSelector.hpp  EffectControls.cpp  EffectControls.hpp  EnhancementToggle.cpp  EnhancementToggle.hpp  EqualizerPanel.cpp  EqualizerPanel.hpp  PresetSelector.cpp  PresetSelector.hpp  StatusIndicator.cpp  StatusIndicator.hpp
src/presets/: Preset.hpp  PresetFactory.cpp  PresetFactory.hpp  PresetStore.cpp  PresetStore.hpp
src/service/: AudioService.cpp  AudioService.hpp
src/system/: AutoStartManager.cpp  AutoStartManager.hpp  ProcessRunner.cpp  ProcessRunner.hpp  RuntimeDependencyChecker.cpp  RuntimeDependencyChecker.hpp  RuntimeStateStore.cpp  RuntimeStateStore.hpp  SettingsStore.cpp  SettingsStore.hpp
